Only search for binaries in trusted prefixes.

Untrusted prefixes are blocked by external command helper anyway.

BUG: 477422